--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@arco-design/web-react": "^2.63.0",
     "axios": "^1.7.2",
     "node": "^18.20.3",
     "node.js": "^0.0.1-security",
