--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@arco-design/web-react": "^2.63.0",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "node": "^18.20.3",
     "node.js": "^0.0.1-security",
